[gd_scene load_steps=7 format=2]

[ext_resource path="res://GridContainer.gd" type="Script" id=1]
[ext_resource path="res://them_font.tres" type="Theme" id=2]
[ext_resource path="res://Assets/fonts/18612.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[node name="CenterContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 243.0
margin_bottom = 197.0

[node name="MarginContainerGrid" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 71.0
margin_bottom = 197.0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainerGrid"]
margin_right = 71.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 1
custom_constants/hseparation = 1
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="HBoxContainer/MarginContainerGrid/GridContainer"]
wait_time = 0.5

[node name="Button" type="Button" parent="HBoxContainer/MarginContainerGrid"]
margin_top = 4.0
margin_right = 71.0
margin_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "START"
script = ExtResource( 4 )

[node name="HUD" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_left = 75.0
margin_right = 243.0
margin_bottom = 197.0
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="final_hud" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/HUD" method="_on_GridContainer_final_hud"]
[connection signal="init_hud" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/HUD" method="_on_GridContainer_init_hud"]
[connection signal="set_level" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/HUD" method="_on_GridContainer_set_level"]
[connection signal="set_level_percent" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/HUD" method="_on_GridContainer_set_level_percent"]
[connection signal="set_preview" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/HUD" method="_on_GridContainer_set_preview"]
[connection signal="set_score" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/HUD" method="_on_GridContainer_set_score"]
[connection signal="start_button_enabled" from="HBoxContainer/MarginContainerGrid/GridContainer" to="HBoxContainer/MarginContainerGrid/Button" method="_on_GridContainer_start_button_enabled"]
[connection signal="timeout" from="HBoxContainer/MarginContainerGrid/GridContainer/Timer" to="HBoxContainer/MarginContainerGrid/GridContainer" method="_on_Timer_timeout"]
[connection signal="pressed" from="HBoxContainer/MarginContainerGrid/Button" to="HBoxContainer/MarginContainerGrid/GridContainer" method="_on_Button_pressed"]
